clipper-reasoner/src/main/java/org/semanticweb/clipper/hornshiq/sparql/SparqlParser.java
// $ANTLR 3.5.2 org/semanticweb/clipper/hornshiq/sparql/Sparql.g 2015-11-22 19:16:16

package org.semanticweb.clipper.hornshiq.sparql;
 
import java.io.IOException;
import java.util.Map;
import java.util.HashMap;
import java.util.Set;
import java.util.HashSet;

import com.google.common.collect.Lists;

import org.semanticweb.clipper.hornshiq.rule.CQ;
import org.semanticweb.clipper.hornshiq.rule.Term;
import org.semanticweb.clipper.hornshiq.rule.Constant;
import org.semanticweb.clipper.hornshiq.rule.Atom;
import org.semanticweb.clipper.hornshiq.rule.Variable;
import org.semanticweb.clipper.hornshiq.rule.Predicate;
import org.semanticweb.clipper.hornshiq.rule.NonDLPredicate;
import org.semanticweb.clipper.hornshiq.rule.DLPredicate;
import org.semanticweb.clipper.util.SymbolEncoder;
import org.semanticweb.clipper.hornshiq.queryanswering.ClipperManager;

import org.semanticweb.owlapi.apibinding.OWLManager;
import org.semanticweb.owlapi.model.IRI;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SparqlParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANON", "DECIMAL", "DECIMAL_NEGATIVE", 
		"DECIMAL_POSITIVE", "DIGIT", "DOUBLE", "DOUBLE_NEGATIVE", "DOUBLE_POSITIVE", 
		"ECHAR", "EXPONENT", "INTEGER", "INTEGER_NEGATIVE", "INTEGER_POSITIVE", 
		"IRI_REF", "LANGTAG", "NIL", "PNAME_LN", "PNAME_NS", "PN_CHARS", "PN_CHARS_BASE", 
		"PN_CHARS_U", "PN_LOCAL", "PN_PREFIX", "STRING_LITERAL1", "STRING_LITERAL2", 
		"VAR1", "VAR2", "VARNAME", "WS", "'('", "')'", "'*'", "','", "'.'", "';'", 
		"'BASE'", "'PREFIX'", "'SELECT'", "'WHERE'", "'['", "']'", "'^^'", "'a'", 
		"'false'", "'true'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int ANON=4;
	public static final int DECIMAL=5;
	public static final int DECIMAL_NEGATIVE=6;
	public static final int DECIMAL_POSITIVE=7;
	public static final int DIGIT=8;
	public static final int DOUBLE=9;
	public static final int DOUBLE_NEGATIVE=10;
	public static final int DOUBLE_POSITIVE=11;
	public static final int ECHAR=12;
	public static final int EXPONENT=13;
	public static final int INTEGER=14;
	public static final int INTEGER_NEGATIVE=15;
	public static final int INTEGER_POSITIVE=16;
	public static final int IRI_REF=17;
	public static final int LANGTAG=18;
	public static final int NIL=19;
	public static final int PNAME_LN=20;
	public static final int PNAME_NS=21;
	public static final int PN_CHARS=22;
	public static final int PN_CHARS_BASE=23;
	public static final int PN_CHARS_U=24;
	public static final int PN_LOCAL=25;
	public static final int PN_PREFIX=26;
	public static final int STRING_LITERAL1=27;
	public static final int STRING_LITERAL2=28;
	public static final int VAR1=29;
	public static final int VAR2=30;
	public static final int VARNAME=31;
	public static final int WS=32;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SparqlParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SparqlParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SparqlParser.tokenNames; }
	@Override public String getGrammarFileName() { return "org/semanticweb/clipper/hornshiq/sparql/Sparql.g"; }


	  Map<String, String> namespaces = new HashMap<String, String>();
	  SymbolEncoder<String> varEncoder = new SymbolEncoder<String>(String.class);
	  CQ cq = new CQ();
	  List<Term> outputVars = new ArrayList<Term>();
	  Atom head;
	  List<Atom> body = new ArrayList<>();
	  
	  Atom currentBodyAtom;
	  Predicate currentPredicate;
	  Term currentSubject;
	  int currentArity;
	  
	  boolean outputAll = false;
	  
	  public SparqlParser(String sparqlFile) throws IOException {
	    super(new CommonTokenStream(new SparqlLexer(new ANTLRFileStream(sparqlFile))));
	  }
	  
	  private String getFullName(String prefixedName){
	    String original = prefixedName.toString();
	    int i = original.indexOf(":");
	    String prefix = original.substring(0,i);
	    String full = namespaces.get(prefix) + original.substring(i+1);
	    return full;
	  }



	// $ANTLR start "query"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:105:1: query returns [CQ q] : prologue ( selectQuery ) EOF ;
	public final CQ query() throws RecognitionException {
		CQ q = null;


		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:106:5: ( prologue ( selectQuery ) EOF )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:106:7: prologue ( selectQuery ) EOF
			{
			pushFollow(FOLLOW_prologue_in_query76);
			prologue();
			state._fsp--;

			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:106:16: ( selectQuery )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:106:18: selectQuery
			{
			pushFollow(FOLLOW_selectQuery_in_query80);
			selectQuery();
			state._fsp--;

			}


			      cq.setHead(head);
			      cq.setBody(body);
			      q = cq; 
			    
			match(input,EOF,FOLLOW_EOF_in_query92); 
			}

		}
		 
		finally {
			// do for sure before leaving
		}
		return q;
	}
	// $ANTLR end "query"



	// $ANTLR start "prologue"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:114:1: prologue : ( baseDecl )? ( prefixDecl )* ;
	public final void prologue() throws RecognitionException {
		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:5: ( ( baseDecl )? ( prefixDecl )* )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:7: ( baseDecl )? ( prefixDecl )*
			{
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:7: ( baseDecl )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==39) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:7: baseDecl
					{
					pushFollow(FOLLOW_baseDecl_in_prologue110);
					baseDecl();
					state._fsp--;

					}
					break;

			}

			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:17: ( prefixDecl )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==40) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:115:17: prefixDecl
					{
					pushFollow(FOLLOW_prefixDecl_in_prologue113);
					prefixDecl();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prologue"



	// $ANTLR start "baseDecl"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:118:1: baseDecl : 'BASE' IRI_REF ;
	public final void baseDecl() throws RecognitionException {
		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:119:5: ( 'BASE' IRI_REF )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:119:7: 'BASE' IRI_REF
			{
			match(input,39,FOLLOW_39_in_baseDecl131); 
			match(input,IRI_REF,FOLLOW_IRI_REF_in_baseDecl133); 
			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "baseDecl"



	// $ANTLR start "prefixDecl"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:122:1: prefixDecl : 'PREFIX' PNAME_NS IRI_REF ;
	public final void prefixDecl() throws RecognitionException {
		Token PNAME_NS1=null;
		Token IRI_REF2=null;

		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:123:5: ( 'PREFIX' PNAME_NS IRI_REF )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:123:7: 'PREFIX' PNAME_NS IRI_REF
			{
			match(input,40,FOLLOW_40_in_prefixDecl150); 
			PNAME_NS1=(Token)match(input,PNAME_NS,FOLLOW_PNAME_NS_in_prefixDecl152); 
			IRI_REF2=(Token)match(input,IRI_REF,FOLLOW_IRI_REF_in_prefixDecl154); 

			      String key = (PNAME_NS1!=null?PNAME_NS1.getText():null);
			      key = key.substring(0, key.length() -1 );
			      String value = (IRI_REF2!=null?IRI_REF2.getText():null);
			      value = value.substring(1, value.length() - 1);
			      namespaces.put(key, value); 
			      //System.out.println((PNAME_NS1!=null?PNAME_NS1.getText():null) + "->" + (IRI_REF2!=null?IRI_REF2.getText():null));
			    
			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prefixDecl"



	// $ANTLR start "selectQuery"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:133:1: selectQuery : 'SELECT' ( ( var )+ | '*' ) whereClause ;
	public final void selectQuery() throws RecognitionException {
		Variable var3 =null;

		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:134:5: ( 'SELECT' ( ( var )+ | '*' ) whereClause )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:134:7: 'SELECT' ( ( var )+ | '*' ) whereClause
			{
			match(input,41,FOLLOW_41_in_selectQuery173); 
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:134:16: ( ( var )+ | '*' )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= VAR1 && LA4_0 <= VAR2)) ) {
				alt4=1;
			}
			else if ( (LA4_0==35) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:135:7: ( var )+
					{
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:135:7: ( var )+
					int cnt3=0;
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( ((LA3_0 >= VAR1 && LA3_0 <= VAR2)) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:135:8: var
							{
							pushFollow(FOLLOW_var_in_selectQuery185);
							var3=var();
							state._fsp--;

							 outputVars.add(var3); 
							}
							break;

						default :
							if ( cnt3 >= 1 ) break loop3;
							EarlyExitException eee = new EarlyExitException(3, input);
							throw eee;
						}
						cnt3++;
					}

					}
					break;
				case 2 :
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:136:10: '*'
					{
					match(input,35,FOLLOW_35_in_selectQuery199); 

					      //TODO
					    
					}
					break;

			}


			      NonDLPredicate ans = new NonDLPredicate("ans", outputVars.size());
			      head = new Atom(ans, outputVars);
			      //System.out.println("head: " + head);
			    
			pushFollow(FOLLOW_whereClause_in_selectQuery236);
			whereClause();
			state._fsp--;

			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "selectQuery"



	// $ANTLR start "sourceSelector"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:183:1: sourceSelector : iriRef ;
	public final void sourceSelector() throws RecognitionException {
		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:184:5: ( iriRef )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:184:7: iriRef
			{
			pushFollow(FOLLOW_iriRef_in_sourceSelector290);
			iriRef();
			state._fsp--;

			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "sourceSelector"



	// $ANTLR start "whereClause"
	// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:187:1: whereClause : ( 'WHERE' )? groupGraphPattern ;
	public final void whereClause() throws RecognitionException {
		try {
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:188:5: ( ( 'WHERE' )? groupGraphPattern )
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:188:7: ( 'WHERE' )? groupGraphPattern
			{
			// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:188:7: ( 'WHERE' )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==42) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// org/semanticweb/clipper/hornshiq/sparql/Sparql.g:188:7: 'WHERE'
					{
					match(input,42,FOLLOW_42_in_whereClause307); 
					}
					break;

			}

			pushFollow(FOLLOW_groupGraphPattern_in_whereClause310);
			groupGraphPattern();
			state._fsp--;

			}

		}
		 
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "whereClause"


